--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:padding="16dp"
     tools:context=".AddItemActivity"
     android:orientation="vertical">
@@ -21,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Quantity"
+        android:layout_marginVertical="20dp"
         android:inputType="number"
         android:autofillHints="" />
 
@@ -30,6 +32,7 @@
         android:padding="16dp"
         android:layout_margin="10dp"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="20dp"
         android:text="Add &amp; Return"
         android:background="@drawable/btn_shape"
         android:textColor="#FFF"/>
